--- a/addons/machinecontroller/webhook.yaml
+++ b/addons/machinecontroller/webhook.yaml
@@ -59,6 +59,7 @@ spec:
         app: machine-controller-webhook
       annotations:
         "kubeone.k8c.io/credentials-hash": "{{ .MachineControllerCredentialsHash }}"
+        "kubeone.k8c.io/cabundle-hash": "{{ .Config.CABundle | sha256sum }}"
     spec:
       nodeSelector:
         node-role.kubernetes.io/control-plane: ""
@@ -92,6 +93,9 @@ spec:
             {{ if .CSIMigrationFeatureGates }}
             - -node-kubelet-feature-gates={{ .CSIMigrationFeatureGates }}
             {{ end }}
+            {{ if .Config.CABundle -}}
+            - -ca-bundle={{ .Resources.CABundleSSLCertFilePath }}
+            {{ end -}}
             {{ if .OperatingSystemManagerEnabled }}
             - -use-osm
             {{ end }}
@@ -108,6 +112,9 @@ spec:
             - name: machinecontroller-webhook-serving-cert
               mountPath: /tmp/cert
               readOnly: true
+{{ if .Config.CABundle }}
+{{ caBundleVolumeMount | indent 12 }}
+{{ end }}
           livenessProbe:
             httpGet:
               path: /healthz
@@ -126,7 +133,9 @@ spec:
           secret:
             secretName: machinecontroller-webhook-serving-cert
             defaultMode: 0444
-
+{{ if .Config.CABundle }}
+{{ caBundleVolume | indent 8 }}
+{{ end }}
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
