--- a/addons/operating-system-manager/deployment-controller.yaml
+++ b/addons/operating-system-manager/deployment-controller.yaml
@@ -16,6 +16,7 @@ spec:
         "prometheus.io/scrape": "true"
         "prometheus.io/port": "8080"
         "prometheus.io/path": "/metrics"
+        "kubeone.k8c.io/cabundle-hash": "{{ .Config.CABundle | sha256sum }}"
         "kubeone.k8c.io/credentials-hash": "{{ .OperatingSystemManagerCredentialsHash }}"
       labels:
         app: operating-system-manager
@@ -78,6 +79,9 @@ spec:
             - name: NO_PROXY
               value: "{{ .Config.Proxy.NoProxy }}"
 {{ .OperatingSystemManagerCredentialsEnvVars | indent 12 }}
+{{ if .Config.CABundle }}
+{{ caBundleEnvVar | indent 12 }}
+{{ end }}
           ports:
             - containerPort: 8085
           livenessProbe:
@@ -98,3 +102,9 @@ spec:
             requests:
               cpu: 50m
               memory: 128Mi
+{{ if .Config.CABundle }}
+          volumeMounts:
+{{ caBundleVolumeMount | indent 12 }}
+      volumes:
+{{ caBundleVolume | indent 8 }}
+{{ end }}
